; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_luma-key-filter.c_luma_key_properties.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_luma-key-filter.c_luma_key_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SETTING_LUMA_MAX = common dso_local global i32 0, align 4
@TEXT_LUMA_MAX = common dso_local global i32 0, align 4
@SETTING_LUMA_MAX_SMOOTH = common dso_local global i32 0, align 4
@TEXT_LUMA_MAX_SMOOTH = common dso_local global i32 0, align 4
@SETTING_LUMA_MIN = common dso_local global i32 0, align 4
@TEXT_LUMA_MIN = common dso_local global i32 0, align 4
@SETTING_LUMA_MIN_SMOOTH = common dso_local global i32 0, align 4
@TEXT_LUMA_MIN_SMOOTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @luma_key_properties to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @luma_key_properties(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i32* (...) @obs_properties_create()
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @SETTING_LUMA_MAX, align 4
  %7 = load i32, i32* @TEXT_LUMA_MAX, align 4
  %8 = call i32 @obs_properties_add_float_slider(i32* %5, i32 %6, i32 %7, i32 0, i32 1, double 1.000000e-02)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @SETTING_LUMA_MAX_SMOOTH, align 4
  %11 = load i32, i32* @TEXT_LUMA_MAX_SMOOTH, align 4
  %12 = call i32 @obs_properties_add_float_slider(i32* %9, i32 %10, i32 %11, i32 0, i32 1, double 1.000000e-02)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @SETTING_LUMA_MIN, align 4
  %15 = load i32, i32* @TEXT_LUMA_MIN, align 4
  %16 = call i32 @obs_properties_add_float_slider(i32* %13, i32 %14, i32 %15, i32 0, i32 1, double 1.000000e-02)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @SETTING_LUMA_MIN_SMOOTH, align 4
  %19 = load i32, i32* @TEXT_LUMA_MIN_SMOOTH, align 4
  %20 = call i32 @obs_properties_add_float_slider(i32* %17, i32 %18, i32 %19, i32 0, i32 1, double 1.000000e-02)
  %21 = load i8*, i8** %2, align 8
  %22 = call i32 @UNUSED_PARAMETER(i8* %21)
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

declare dso_local i32* @obs_properties_create(...) #1

declare dso_local i32 @obs_properties_add_float_slider(i32*, i32, i32, i32, i32, double) #1

declare dso_local i32 @UNUSED_PARAMETER(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
